--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^12.6.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-data-table-component": "^7.0.0-alpha-5",
     "react-dom": "^17.0.1",
+    "react-pure-modal": "^2.0.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
